--- a/40990131M_BONUS/latex_files/main.tex
+++ b/40990131M_BONUS/latex_files/main.tex
@@ -108,7 +108,7 @@
 \addbibresource{\jobname.bib}
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{A Brief Tutorial for ncurses\\
+\title{A Brief Introduction to ncurses\\
   \large 111-2 Programming(II) Bonus}
 \author{Hsin-Yen, Chiang}
 \maketitle
